--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "compile": "node_modules/.bin/babel -d lib/ src/",
     "prepublish": "npm run compile",
+    "prepare": "npm run compile",
     "mocha": "node_modules/.bin/mocha --compilers js:babel-core/register",
     "test": "npm run compile && npm run mocha"
   },
