--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "libopus.js": "0.0.1",
     "libcelt7.js": "0.0.1",
     "reuse-pool": "^1.0.2",
-    "to-arraybuffer": "^1.0.1",
-    "webworkify": "^1.3.0"
+    "to-arraybuffer": "^1.0.1"
   }
 }
